--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@atlaskit/css-reset": "^5.0.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -17,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier-standard --format"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +42,8 @@
   },
   "standard": {
     "parser": "babel-eslint"
+  },
+  "devDependencies": {
+    "prettier-standard": "^16.3.0"
   }
 }
